--- a/css/style.css
+++ b/css/style.css
@@ -397,3 +397,50 @@ a {
 /* ======================
    About part end
 ======================= */
+/* ======================
+   Contact part start
+======================= */
+.contact .row{
+    --bs-gutter-x: 0rem;
+   
+}
+.contact img{
+    width: 100%;
+    height: 100%;
+}
+
+.contact .contact-content{
+    width: 100%;
+    height: 691px;
+    background: #1C1E53;
+    padding-top: 106px;
+    padding-left: 96px;
+    padding-right: 96px;
+
+}
+.contact .contact-content h6{
+      font-size: 32px;
+    font-weight: 600;
+    color: #fff;
+     font-family: "Poppins", sans-serif;
+
+}
+.contact .contact-content p{
+      font-size: 16px;
+    font-weight: 400;
+    color: #F4F6FC;
+     font-family: "Poppins", sans-serif;
+
+}
+.contact .contact-content input{
+    width: 100%;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255,0.05);
+    padding: 18px 32px;
+    margin: 16px 0px;
+    border-radius: 8px;
+}
+
+/* ======================
+   Contact part end
+======================= */
